--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -10,9 +10,10 @@
 .container {
   width: 80%;
   margin: auto;
+  height: 30%;
   border: 1px 1px solid gray;
   background:rgba(247, 244, 244, 0.7);
-  font-size: large;
+  font-size: 1.2rem;
 }
 
 .break {
