--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -13,7 +13,7 @@
   height: 30%;
   border: 1px 1px solid gray;
   background:rgba(247, 244, 244, 0.7);
-  font-size: 1.2rem;
+  font-size: 62.5;
 }
 
 .break {
