--- a/src/styles/Finish.css
+++ b/src/styles/Finish.css
@@ -5,12 +5,14 @@
     height: 30%;
   }
 
+  
   .gif{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30%;
+    margin-top: 30rem;
     width: 50%;
+    height: 20%;
     border-radius: 10%;
     box-shadow: 0px 0px 6px 10px white;
   }
